@@ -4,6 +4,7 @@ Version 0.3.9+
 	* parallel multiple kmeans runs using jug
 	* cluster_agreement for non-ndarrays
 	* Add histogram & normali(z|s)e options to ``milk.kmeans.assign_centroid``
+	* Fix bug in sda when features were constant for a class
 
 Version 0.3.9 2011-03-15 by luispedro
 	* Improve speed of k-nearest neighbour (10x on scikits-learn benchmark)
